# minicoro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-build.yml
example/: CMakeLists.txt  echo_server.cpp
include/execution/: execution_policy.hpp  executor.hpp  task.hpp
include/system/event/: i_event_handler.hpp
include/system/io/: epoll.hpp  reactor.hpp
include/system/reactor/: reactor.hpp
